# gecos2

./: .gitignore  README.md  nohup.out  requirements.txt  setup.cfg  setup.py
data/: AtacPS.mol2  AtacPS_frompdb.sdf  IsoP.mol2  IsoP_frompdb.sdf  PET.mol2  PET2.mol2  PET_frompdb.sdf  PET_gview.mol2  PET_ms.mol2  PET_ob.mol2  nitrobenzene.sdf  nitrobenzene_frompdb.sdf  nitrobenzene_ms.mol2  nitrobenzene_ms_frompdb.sdf
docs/: 00-release_notes.md  01-downloads.md  02-installation.md  03-setupgecosgui.md  04-Generation_of_conformers.md  ap01-slurm.md  xx-gui_sections.md  xx-key-localhost.md  xx-key-remotehost.md  xx-tutorial01.md  xxx-Prepare_from_MD_Untitled-1.md
gecos/: __init__.py  gecos.py  gecos_extract_neighbors.py  gecos_pdbfolder.py  gecos_pybabel.py  gecos_rdkit.py  gecos_systematic_grid.py  send_qm_conformers.py
gecos_analysis/: __init__.py  gecos_CnnClusteringWrapper.py  gecos_analysis.py  gecos_closecontacts.py  gecos_compare_spectrum.py  gecos_exp_irspectra.py  gecos_irspectra.py  gecos_outputgaussian.py  gecos_resp_analysis.py
gecos_gui/: __init__.py  common_elements.py  events.py  events_check.py  events_export.py  events_import.py  events_open.py  general_inputs_tab.py  main_figure_layout.py  main_tabgroup.py  maingui.py  menu_layout.py  prop_conf_tab.py  todelete_extract_mol_tab.py
recipes/: CanonicalReordering.ipynb  Tutorial_conf_rdkit.ipynb  Tutorial_formats-Copy1.ipynb  Tutorial_formats.ipynb  Tutorial_rdkit_conformers.ipynb
utils/: DBJobs.py  Report.py  Server.py  ServerSlurm.py  __init__.py  atomic_data.py  compress_files.py  gaussian16.py  (+5 more)
(+2347 files in other folders)
