[metadata]
name = gecos
version = attr: gecos.__version__
description = Python library to easily generate conformers of small molecules with QM support.
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
zip_safe = false
packages = find:
test_suite = tests
include_package_data = true

[options.packages.find]
include =
    gecos
    gecos_gui
    gecos_analysis
    utils

[options.data_files]
thirdparty = thirdparty/dock_rmsd/dockrmsd.x
imgs = gecos_gui/lizard_small.gif

[options.entry_points]
console_scripts =
    gecos_gui = gecos_gui:main
    gecos = gecos:main
    gecos_analysis = gecos_analysis:main

[bdist_wheel]
universal = true